[project]
name = "2_1D_Gauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "netket>=3.16.1.post1",
    "nvidia-ml-py>=13.580.65",
    "jax[cuda12]",
    "psutil>=7.0.0",
]
